# scratchscript

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE.txt  README.md  example.ss  index.html  vcpkg.json
css/: style.css
src/: index.js  main.cpp  script.js
